--- a/fruad_detection/requirements.txt
+++ b/fruad_detection/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-scikit-learn
-pandas
-joblib
-tensorflow==2.15.0
+streamlit==1.46.0
+scikit-learn==1.7.0
+pandas==2.3.0
+joblib==1.5.1
+tensorflow-cpu==2.10.1
