--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,8 @@
-[general]
-pythonVersion = "3.10"
+[server]
+headless = true
+port = 8501
+enableCORS = false
+enableXsrfProtection = false
+
+[browser]
+gatherUsageStats = false
