--- a/Cancer_prediction/app/requirements.txt
+++ b/Cancer_prediction/app/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.23.4
-pandas==1.5.1
-scikit-learn==1.2.2
-plotly==5.11.0
-streamlit==1.18.1
+streamlit>=1.25
+numpy>=1.26
+pandas
+plotly
+scikit-learn
