--- a/stock_prediction/vercel.json
+++ b/stock_prediction/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/predict.py", "use": "@vercel/python" },
-    { "src": "pages/**/*.js", "use": "@vercel/next" }
+    { "src": "stock_prediction/api/predict.py", "use": "@vercel/python" },
+    { "src": "stock_prediction/package.json", "use": "@vercel/next" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/predict.py" },
-    { "src": "/(.*)", "dest": "/pages/index.js" }
+    { "src": "/api/(.*)", "dest": "stock_prediction/api/predict.py" },
+    { "src": "/(.*)", "dest": "stock_prediction/" }
   ]
 }
