--- a/stock_prediction/requirements.txt
+++ b/stock_prediction/requirements.txt
@@ -1,10 +1,9 @@
+tensorflow==2.16.1
 streamlit==1.45.1
-tensorflow==2.15.0
-keras==2.15.0
 pandas
 numpy
 scikit-learn
 matplotlib
 plotly
-platformdirs
+yfinance
 alpha_vantage
